RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -62,7 +62,8 @@ MySQL ->> 웹서버 :
 * 쿼리가 실행될 때 조건 절에 일치하는 레코드를 찾기 위해, 스캔하는 인덱스의 모든 레코드에 잠금을 건다.
 	* where절 조건에 일치하지 않는 레코드도 lock 대상이 된다.
 	* 조건 절에 조건을 모두 사용하지 않을 수 있다. (10개 조건을 지정했을 때 일부 조건만 사용)
-	* 
+	* MySQL은 인덱스를 적절히 사용할 수 있는 조건만 있으면 스토리지 엔진으로 전달한다.
+	* InnoDB 스토리지 엔진은 WHERE절에 명시된 모든 조건에 일치하는 레코드만 선별적으로 lock을 거는 것이 불가능하다. 그래서 index를 사용할 수 있는 조건만 일치하면 모두 잠궈버린다.
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -115,5 +116,5 @@ MySQL ->> 웹서버 :
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5NTU4NjQ5NCwxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbLTE4ODMwNTM1MTQsMTczNDkyMjQzNV19
 -->
