--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -24,9 +24,13 @@
 
 ### SELECT로 읽은 record에 lock을 거는 방법
 * read-mode
-	`SELECT * FROM employees WHERE emp_no = 10001 LOCK IN SHARE MODE;`
+	```sql
+	SELECT * FROM employees WHERE emp_no = 10001 LOCK IN SHARE MODE;
+	```
 * write-mode
-	`SELECT * FROM employees WHERE emp_no = 10001 FOR UPDATE;`
+	```sql
+	SELECT * FROM employees WHERE emp_no = 10001 FOR UPDATE;
+	```
 
 - 위 두가지 방식 모두 다른 트랜잭션에서 변경하지 못하게 막는다.
 - read-mode는 읽기에 대해서만 lock을 획득한 상태라서, 해당 레코드를 변경하려면 다시 write-lock을 획득해야 한다.
@@ -64,6 +68,11 @@ MySQL ->> 웹서버 :
 	* 조건 절에 조건을 모두 사용하지 않을 수 있다. (10개 조건을 지정했을 때 일부 조건만 사용)
 	* MySQL은 인덱스를 적절히 사용할 수 있는 조건만 있으면 스토리지 엔진으로 전달한다.
 	* InnoDB 스토리지 엔진은 WHERE절에 명시된 모든 조건에 일치하는 레코드만 선별적으로 lock을 거는 것이 불가능하다. 그래서 index를 사용할 수 있는 조건만 일치하면 모두 잠궈버린다.
+
+```sql
+UPDATE employees SET last_name = '...'
+WHERE first_name='Gerogi' AND ' gender='F';
+```
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -116,5 +125,5 @@ MySQL ->> 웹서버 :
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4ODMwNTM1MTQsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbMTMyNzM1MTEzNywxNzM0OTIyNDM1XX0=
 -->
