RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -70,9 +70,12 @@ MySQL ->> 웹서버 :
 	* InnoDB 스토리지 엔진은 WHERE절에 명시된 모든 조건에 일치하는 레코드만 선별적으로 lock을 거는 것이 불가능하다. 그래서 index를 사용할 수 있는 조건만 일치하면 모두 잠궈버린다.
 
 ```sql
+-- index는 first_name만 존재한다.
 UPDATE employees SET last_name = '...'
 WHERE first_name='Gerogi' AND ' gender='F';
 ```
+- 스토리지 엔진에서 `first_name='Gerogi'`
+
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -125,5 +128,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMyNzM1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTUwOTYwNTYxNiwxMzI3MzUxMTM3LDE3Mz
+Q5MjI0MzVdfQ==
 -->
