RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -74,7 +74,9 @@ MySQL ->> 웹서버 :
 UPDATE employees SET last_name = '...'
 WHERE first_name='Gerogi' AND ' gender='F';
 ```
-- 스토리지 엔진에서 `first_name='Gerogi'`
+- 스토리지 엔진에서 `first_name='Gerogi'`인 모든 레코드를 lock 건다. (불필요하게!)
+- MySQL 엔진에서 성별이 F인 사원의 last_name만 변경한다.
+- UPDATE, DELETE 쿼리가 실행될 때는 항상 lock 대상이 변경 대상 레코드보다 범위가 크거나 같다.
 
 
 # 12.2 SQL 문장별로 사용하는 lock
@@ -128,6 +130,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUwOTYwNTYxNiwxMzI3MzUxMTM3LDE3Mz
-Q5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbLTE3NzUwNjgwNzUsMTMyNzM1MTEzNywxNz
+M0OTIyNDM1XX0=
 -->
