--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -78,6 +78,10 @@ WHERE first_name='Gerogi' AND ' gender='F';
 - MySQL 엔진에서 성별이 F인 사원의 last_name만 변경한다.
 - UPDATE, DELETE 쿼리가 실행될 때는 항상 lock 대상이 변경 대상 레코드보다 범위가 크거나 같다.
 
+### 정리
+- select에서는 사용하지 않더라도 update, delete를 위해서 반드시 인덱스를 만들어야 할 때가 있다.
+	- 제대로 된 인덱스를 사용하지 못하면, 쿼리가 상당히 비효율적으로 실행되며 동시성도 떨어진다.
+- 
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -130,6 +134,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NzUwNjgwNzUsMTMyNzM1MTEzNywxNz
-M0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTQ3MzcyMjY5MSwxMzI3MzUxMTM3LDE3Mz
+Q5MjI0MzVdfQ==
 -->
