--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -81,7 +81,8 @@ WHERE first_name='Gerogi' AND ' gender='F';
 ### 정리
 - select에서는 사용하지 않더라도 update, delete를 위해서 반드시 인덱스를 만들어야 할 때가 있다.
 	- 제대로 된 인덱스를 사용하지 못하면, 쿼리가 상당히 비효율적으로 실행되며 동시성도 떨어진다.
-- 
+- update, delete의 조건으로 사용되는 컬럼이 있다면 반드시 해당 컬럼에 인덱스를 생성하기를 권장한다.
+	- 조건절 컬럼이 인덱스가 없으면, 대체할 인덱스가 없을 경우 모든 레코드에 lock을 걸고 변경 대상 레코드를 찾아서 변경한다.
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -134,6 +135,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ3MzcyMjY5MSwxMzI3MzUxMTM3LDE3Mz
+eyJoaXN0b3J5IjpbLTE5NDY4MDY0NSwxMzI3MzUxMTM3LDE3Mz
 Q5MjI0MzVdfQ==
 -->
