--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -83,7 +83,10 @@ WHERE first_name='Gerogi' AND ' gender='F';
 	- 제대로 된 인덱스를 사용하지 못하면, 쿼리가 상당히 비효율적으로 실행되며 동시성도 떨어진다.
 - update, delete의 조건으로 사용되는 컬럼이 있다면 반드시 해당 컬럼에 인덱스를 생성하기를 권장한다.
 	- 조건절 컬럼이 인덱스가 없으면, 대체할 인덱스가 없을 경우 모든 레코드에 lock을 걸고 변경 대상 레코드를 찾아서 변경한다. (MyISAM 보다도 동시성이 떨어질 수 있다)
-- REPETABLE-READ 가 아니라 READ-COMMITTED로 사용하면
+- 바이너리 로그 기록 안할 경우,
+	- REPETABLE-READ 가 아니라 READ-COMMITTED로 사용할 수 있다.
+	- 이때는 인덱스와 관계없이 실제 변경되는 레코드만 lock을 걸게 된다.
+		- 정확히는, 인덱스 조건에 일치하는 모든 레코드에 lock을 걸었다가
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -136,6 +139,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNDM0ODA4MzYsMTMyNzM1MTEzNywxNz
-M0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbLTE3NTUyOTE0OCwxMzI3MzUxMTM3LDE3Mz
+Q5MjI0MzVdfQ==
 -->
