--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -86,7 +86,8 @@ WHERE first_name='Gerogi' AND ' gender='F';
 - 바이너리 로그 기록 안할 경우,
 	- REPETABLE-READ 가 아니라 READ-COMMITTED로 사용할 수 있다.
 	- 이때는 인덱스와 관계없이 실제 변경되는 레코드만 lock을 걸게 된다.
-		- 정확히는, 인덱스 조건에 일치하는 모든 레코드에 lock을 걸었다가
+		- 정확히는, 인덱스 조건에 일치하는 모든 레코드에 lock을 걸었다가, 실제 변경 대상을 모두 찾아서 조건이 일치하지 않는 대상은 lock을 해제한다.
+		- SELECT의 read-lock, write-lock도 동일하다.
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -139,6 +140,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTUyOTE0OCwxMzI3MzUxMTM3LDE3Mz
+eyJoaXN0b3J5IjpbLTQ2NDA2MTM3NSwxMzI3MzUxMTM3LDE3Mz
 Q5MjI0MzVdfQ==
 -->
