RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -90,6 +90,8 @@ WHERE first_name='Gerogi' AND ' gender='F';
 		- SELECT의 read-lock, write-lock도 동일하다.
 
 # 12.2 SQL 문장별로 사용하는 lock
+* 쿼리 종류별로 사용하는 lock 방식이 다르다.
+* 전혀 lock을 사용하지 않을 것으로 예상했던 쿼리도 lock을 사용하는 것이 있다.
 
 ## SELECT 쿼리의 lock
 ### SELECT ... FROM ...
@@ -140,6 +142,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ2NDA2MTM3NSwxMzI3MzUxMTM3LDE3Mz
+eyJoaXN0b3J5IjpbLTE5NTY4NTIwNywxMzI3MzUxMTM3LDE3Mz
 Q5MjI0MzVdfQ==
 -->
