RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -93,12 +93,12 @@ WHERE first_name='Gerogi' AND ' gender='F';
 * 쿼리 종류별로 사용하는 lock 방식이 다르다.
 * 전혀 lock을 사용하지 않을 것으로 예상했던 쿼리도 lock을 사용하는 것이 있다.
 
-## SELECT 쿼리의 lock
+## 1. SELECT 쿼리의 lock
 ### SELECT ... FROM ...
 ### SELECT ... FROM ... LOCK IN SHARE MODE
 ### SELECT ... FROM ... FOR UPDATE
 
-## INSERT 쿼리의 lock
+## 2. INSERT 쿼리의 lock
 ### INSERT ...
 
 ### INSERT INTO ... ON DUPLICATE KEY UPDATE ...
@@ -110,18 +110,18 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 ### REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 
-## UPDATE 쿼리의 lock
+## 3. UPDATE 쿼리의 lock
 
 ### UPDATE ... WHERE ...
 
 ### UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
 
-## DELETE 쿼리의 lock
+## 4. DELETE 쿼리의 lock
 
 ### DELETE FROM ... WHERE ...
 ### DELETE a FROM tb_test1 a, tb_test2 b ...
 
-## DDL 문장의 lock
+## 5. DDL 문장의 lock
 ### CREATE TABLE tb_new ... SELECT ... FROM tb_old ...
 
 ### RENAME TABLE tb_test TO tb_Backup, tb_swap TO tb_test, ...
@@ -142,6 +142,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTY4NTIwNywxMzI3MzUxMTM3LDE3Mz
-Q5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbLTE5NTUzMDYxMTYsMTMyNzM1MTEzNywxNz
+M0OTIyNDM1XX0=
 -->
