RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -95,6 +95,10 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 ## 1. SELECT 쿼리의 lock
 ### SELECT ... FROM ...
+* 기본 형태의 select 쿼리는 lock을 사용하지 않는다.
+* 만약 읽어야 할 레코드가 다른 트랜잭션에 의해 변경되거나 삭제되는 중이라면 undo log를 이용해 레코드를 읽는다.
+* select만 수행할 때는 다른 트랜잭션 쿼리의
+
 ### SELECT ... FROM ... LOCK IN SHARE MODE
 ### SELECT ... FROM ... FOR UPDATE
 
@@ -142,6 +146,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTUzMDYxMTYsMTMyNzM1MTEzNywxNz
-M0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMjczNDM5ODQ5LC0xOTU1MzA2MTE2LDEzMj
+czNTExMzcsMTczNDkyMjQzNV19
 -->
