RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -97,9 +97,13 @@ WHERE first_name='Gerogi' AND ' gender='F';
 ### SELECT ... FROM ...
 * 기본 형태의 select 쿼리는 lock을 사용하지 않는다.
 * 만약 읽어야 할 레코드가 다른 트랜잭션에 의해 변경되거나 삭제되는 중이라면 undo log를 이용해 레코드를 읽는다.
-* select만 수행할 때는 다른 트랜잭션 쿼리의
+* select만 수행할 때는 다른 트랜잭션 쿼리의 영향을 받지 않으며, 대기하지도 않는다.
+* DDL 문장으로 테이블 구조가 변경되는 중에도 처리될 수 있다.
+* 단, SERIALIZABLE 인 경우 `LOCK IN SHARE MODE`가 기본으로 붙는다.
 
 ### SELECT ... FROM ... LOCK IN SHARE MODE
+* 
+
 ### SELECT ... FROM ... FOR UPDATE
 
 ## 2. INSERT 쿼리의 lock
@@ -146,6 +150,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjczNDM5ODQ5LC0xOTU1MzA2MTE2LDEzMj
+eyJoaXN0b3J5IjpbMzcwNzUyOTU2LC0xOTU1MzA2MTE2LDEzMj
 czNTExMzcsMTczNDkyMjQzNV19
 -->
