RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -94,45 +94,45 @@ WHERE first_name='Gerogi' AND ' gender='F';
 * 전혀 lock을 사용하지 않을 것으로 예상했던 쿼리도 lock을 사용하는 것이 있다.
 
 ## 1. SELECT 쿼리의 lock
-### SELECT ... FROM ...
+### 1) SELECT ... FROM ...
 * 기본 형태의 select 쿼리는 lock을 사용하지 않는다.
 * 만약 읽어야 할 레코드가 다른 트랜잭션에 의해 변경되거나 삭제되는 중이라면 undo log를 이용해 레코드를 읽는다.
 * select만 수행할 때는 다른 트랜잭션 쿼리의 영향을 받지 않으며, 대기하지도 않는다.
 * DDL 문장으로 테이블 구조가 변경되는 중에도 처리될 수 있다.
 * 단, SERIALIZABLE 인 경우 `LOCK IN SHARE MODE`가 기본으로 붙는다.
 
-### SELECT ... FROM ... LOCK IN SHARE MODE
-* 
+### 2) SELECT ... FROM ... LOCK IN SHARE MODE
+* WHERE절에 일치하는 레코드 뿐 아니라 검색을 위해 접근한 모든 레코드에 대해 `shared next-key lock`을 상
 
-### SELECT ... FROM ... FOR UPDATE
+### 3) SELECT ... FROM ... FOR UPDATE
 
 ## 2. INSERT 쿼리의 lock
-### INSERT ...
+### 1) INSERT ...
 
-### INSERT INTO ... ON DUPLICATE KEY UPDATE ...
+### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
-### REPLACE ...
+### 3) REPLACE ...
 
 
-### INSERT INTO tb_new ... SELECT ... FROM tb_old ...
+### 4) INSERT INTO tb_new ... SELECT ... FROM tb_old ...
 
-### REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
+### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 
 ## 3. UPDATE 쿼리의 lock
 
-### UPDATE ... WHERE ...
+### 1) UPDATE ... WHERE ...
 
-### UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
+### 2) UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
 
 ## 4. DELETE 쿼리의 lock
 
-### DELETE FROM ... WHERE ...
-### DELETE a FROM tb_test1 a, tb_test2 b ...
+### 1) DELETE FROM ... WHERE ...
+### 2) DELETE a FROM tb_test1 a, tb_test2 b ...
 
 ## 5. DDL 문장의 lock
-### CREATE TABLE tb_new ... SELECT ... FROM tb_old ...
+### 1) CREATE TABLE tb_new ... SELECT ... FROM tb_old ...
 
-### RENAME TABLE tb_test TO tb_Backup, tb_swap TO tb_test, ...
+### 2) RENAME TABLE tb_test TO tb_Backup, tb_swap TO tb_test, ...
 
 
 ## InnoDB에서 여러 쿼리 패턴 간의 lock wait
@@ -150,6 +150,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzcwNzUyOTU2LC0xOTU1MzA2MTE2LDEzMj
-czNTExMzcsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbMjA4MTUxNzg1MywtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
