RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -102,7 +102,11 @@ WHERE first_name='Gerogi' AND ' gender='F';
 * 단, SERIALIZABLE 인 경우 `LOCK IN SHARE MODE`가 기본으로 붙는다.
 
 ### 2) SELECT ... FROM ... LOCK IN SHARE MODE
-* WHERE절에 일치하는 레코드 뿐 아니라 검색을 위해 접근한 모든 레코드에 대해 `shared next-key lock`을 상
+* WHERE절에 일치하는 레코드 뿐 아니라 검색을 위해 접근한 모든 레코드에 대해 `shared next-key lock`을 사용한다.
+* 만약 해당 레코드가 다른 트랜잭션에 의해 write-lock이 걸려있다면 잠금이 해제될 때까지 wait 한다.
+* 만약 해당 레코드가 다른 트랜잭션에 의해 read-lock이 걸려있다면 별도의 대기 없이 lock을 획득한다.
+* 해당 lock은 COMMIT, ROLLBACK 명령으로 트랜잭션이 종료되면 자동으로 해제된다.
+* D
 
 ### 3) SELECT ... FROM ... FOR UPDATE
 
@@ -150,6 +154,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA4MTUxNzg1MywtMTk1NTMwNjExNiwxMz
-I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbMjU2OTEzNDcwLC0xOTU1MzA2MTE2LDEzMj
+czNTExMzcsMTczNDkyMjQzNV19
 -->
