RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -102,13 +102,14 @@ WHERE first_name='Gerogi' AND ' gender='F';
 * 단, SERIALIZABLE 인 경우 `LOCK IN SHARE MODE`가 기본으로 붙는다.
 
 ### 2) SELECT ... FROM ... LOCK IN SHARE MODE
-* WHERE절에 일치하는 레코드 뿐 아니라 검색을 위해 접근한 모든 레코드에 대해 `shared next-key lock`을 사용한다.
+* WHERE절에 일치하는 레코드 뿐 아니라 검색을 위해 접근한 모든 레코드에 대해 `Shared next-key lock`을 사용한다.
 * 만약 해당 레코드가 다른 트랜잭션에 의해 write-lock이 걸려있다면 잠금이 해제될 때까지 wait 한다.
 * 만약 해당 레코드가 다른 트랜잭션에 의해 read-lock이 걸려있다면 별도의 대기 없이 lock을 획득한다.
 * 해당 lock은 COMMIT, ROLLBACK 명령으로 트랜잭션이 종료되면 자동으로 해제된다.
-* D
+* DDL 문장은 실행이 완료되면 자동으로 트랜잭션을 종료시키므로, 같은 트랜잭션에서 DDL이 실행되면 자동으로 lock이 해제된다.
 
 ### 3) SELECT ... FROM ... FOR UPDATE
+* WHERE 절에 일치하는 레코드 뿐 아니라 검색을 위해 접근한 모든 레코드에 대해서 `Exclusive next-key lock`을 사요
 
 ## 2. INSERT 쿼리의 lock
 ### 1) INSERT ...
@@ -154,6 +155,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjU2OTEzNDcwLC0xOTU1MzA2MTE2LDEzMj
+eyJoaXN0b3J5IjpbNjcwNzU4NzgzLC0xOTU1MzA2MTE2LDEzMj
 czNTExMzcsMTczNDkyMjQzNV19
 -->
