RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -111,7 +111,7 @@ WHERE first_name='Gerogi' AND ' gender='F';
 ### 3) SELECT ... FROM ... FOR UPDATE
 * WHERE 절에 일치하는 레코드 뿐 아니라 검색을 위해 접근한 모든 레코드에 대해서 `Exclusive next-key lock`을 사용한다.
 * 대상 레코드가 다른 트랜잭션에 의해 read-lock, write-lock으로 잠겨있다면 해제될때까지 wait 한다.
-* `FOR UPDATE`가 사용되면 select 쿼리는 snapshot을 이용한 읽기를 사용하지 못하기 때문에 consistent read가 무시된다.
+* `FOR UPDATE`가 사용되면 select 쿼리는 snapshot을 이용한 읽기를 사용하지 못하기 때문에 `consistent read`가 무시된다. (page 127 non-locking consistent read 참고)
 
 ## 2. INSERT 쿼리의 lock
 ### 1) INSERT ...
@@ -157,6 +157,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzY5NTk1NzY1LC0xOTU1MzA2MTE2LDEzMj
-czNTExMzcsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbMTgzODIzNjAzOCwtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
