--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -124,6 +124,8 @@ WHERE first_name='Gerogi' AND ' gender='F';
 ### 4) INSERT INTO tb_new ... SELECT ... FROM tb_old ...
 
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
+* `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
+* 이
 
 ## 3. UPDATE 쿼리의 lock
 
@@ -157,6 +159,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgzODIzNjAzOCwtMTk1NTMwNjExNiwxMz
-I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbNTQzMzIyNTkyLC0xOTU1MzA2MTE2LDEzMj
+czNTExMzcsMTczNDkyMjQzNV19
 -->
