RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -115,6 +115,7 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 ## 2. INSERT 쿼리의 lock
 ### 1) INSERT ...
+* 기본적으로 exclusive-lock을 
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -125,7 +126,8 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
-* 이
+* tb_old 테이블에 lock을 회피하는 방법은 위와 동일하다.
+	* 두 개 쿼리로 나눠서 실행하는 3번째 방법은 `LOAD DATA INFILE ...` 명령에 `REPLACE` 옵션을 사용해야 동일한 효과를 낼 수 있다.
 
 ## 3. UPDATE 쿼리의 lock
 
@@ -159,6 +161,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTQzMzIyNTkyLC0xOTU1MzA2MTE2LDEzMj
-czNTExMzcsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbNTA2Mjk5NzEsLTE5NTUzMDYxMTYsMTMyNz
+M1MTEzNywxNzM0OTIyNDM1XX0=
 -->
