RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -115,7 +115,9 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 ## 2. INSERT 쿼리의 lock
 ### 1) INSERT ...
-* 기본적으로 exclusive-lock을 
+* 기본적으로 `exclusive-record-lock`을 사용한다.
+* primary key, unique key가 존재하면 중복 체크를 위해 `shared-record-lock`을 먼저 획득해야 한다.
+* 추가로 INSERT INTENTI
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -161,6 +163,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTA2Mjk5NzEsLTE5NTUzMDYxMTYsMTMyNz
-M1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbNTk0NjI4ODQyLC0xOTU1MzA2MTE2LDEzMj
+czNTExMzcsMTczNDkyMjQzNV19
 -->
