RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -117,7 +117,11 @@ WHERE first_name='Gerogi' AND ' gender='F';
 ### 1) INSERT ...
 * 기본적으로 `exclusive-record-lock`을 사용한다.
 * primary key, unique key가 존재하면 중복 체크를 위해 `shared-record-lock`을 먼저 획득해야 한다.
-* 추가로 INSERT INTENTI
+* 추가로 `insert intention lock` 방식도 사용한다.
+	* INSERT를 실행할 의도를 지닌 쿼리가 획득해야 하는 lock
+	* 모든 INSERT 쿼리는 이 lock을 획득한 후에 insert를 수행한다.
+	* insert된 레코드에 대해서는 exclusive-record-lock을 자동으로 획득하게 된다.
+	* GAB-LOCK의 일종
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -163,6 +167,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTk0NjI4ODQyLC0xOTU1MzA2MTE2LDEzMj
-czNTExMzcsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbLTE4NDAyODkyMTEsLTE5NTUzMDYxMTYsMT
+MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
 -->
