RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -120,8 +120,10 @@ WHERE first_name='Gerogi' AND ' gender='F';
 * 추가로 `insert intention lock` 방식도 사용한다.
 	* INSERT를 실행할 의도를 지닌 쿼리가 획득해야 하는 lock
 	* 모든 INSERT 쿼리는 이 lock을 획득한 후에 insert를 수행한다.
-	* insert된 레코드에 대해서는 exclusive-record-lock을 자동으로 획득하게 된다.
-	* GAB-LOCK의 일종
+	* insert된 레코드에 대해서는 `exclusive-record-lock`을 자동으로 획득하게 된다.
+	* GAB-LOCK의 일종.
+	* 여러 트랜잭션이 동시에 `insert-intention-lock`을 획득할 수 있다.
+	* 그러나 다른 트랜잭션이 이미 record, gab-lock을 걸고 있다면 insert-intention-lock을 획득하기 위해 wait 해야 한다.
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -167,6 +169,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NDAyODkyMTEsLTE5NTUzMDYxMTYsMT
-MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTc1NzkzNzM4NCwtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
