--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -123,7 +123,11 @@ WHERE first_name='Gerogi' AND ' gender='F';
 	* insert된 레코드에 대해서는 `exclusive-record-lock`을 자동으로 획득하게 된다.
 	* GAB-LOCK의 일종.
 	* 여러 트랜잭션이 동시에 `insert-intention-lock`을 획득할 수 있다.
-	* 그러나 다른 트랜잭션이 이미 record, gab-lock을 걸고 있다면 insert-intention-lock을 획득하기 위해 wait 해야 한다.
+	* 그러나 다른 트랜잭션이 이미 record-lock, gab-lock을 걸고 있다면 `insert-intention-lock`을 획득하기 위해 wait 해야 한다.
+	* InnoDB의 Intention-lock과 다르니 유의하자. 이건 MyISAM의 table-lock과 호환을 위해 존재하는 lock이다.
+
+##### 
+
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -169,6 +173,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc1NzkzNzM4NCwtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbLTQ1MjQ1Nzc0OCwtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
