RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -126,8 +126,15 @@ WHERE first_name='Gerogi' AND ' gender='F';
 	* 그러나 다른 트랜잭션이 이미 record-lock, gab-lock을 걸고 있다면 `insert-intention-lock`을 획득하기 위해 wait 해야 한다.
 	* InnoDB의 Intention-lock과 다르니 유의하자. 이건 MyISAM의 table-lock과 호환을 위해 존재하는 lock이다.
 
-##### 
-
+#### insert intention lock
+* GAB-Lock으로 인한 동시성 감소를 최소화하기 위해 사용된다.
+```sql
+CREATE TABLE tb_test {
+  fdpk INT NOT NULL,
+  PRIMARY KEY(fdpk)
+);
+INSERT INTO tb_test VALUES (1), (6), (8
+```
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -173,6 +180,6 @@ WHERE first_name='Gerogi' AND ' gender='F';
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ1MjQ1Nzc0OCwtMTk1NTMwNjExNiwxMz
-I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbNzQyMTMxNTA4LC0xOTU1MzA2MTE2LDEzMj
+czNTExMzcsMTczNDkyMjQzNV19
 -->
