RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -133,8 +133,24 @@ CREATE TABLE tb_test {
   fdpk INT NOT NULL,
   PRIMARY KEY(fdpk)
 );
-INSERT INTO tb_test VALUES (1), (6), (8
+INSERT INTO tb_test VALUES (1), (6), (8), (9);
 ```
+위 상태에서 3개의 INSRET 쿼리를 실행할 때 lock 사용현황을 살펴보자.
+```sql
+-- transaction#1
+BEGIN;
+INSERT INTO tb_test VALEUS (5);
+
+-- transaction#2
+BEGIN;
+INSERT INTO tb_test VALEUS (3);
+
+-- transaction#3
+BEGIN;
+INSERT INTO tb_test VALEUS (4);
+```
+* tb
+
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -180,6 +196,6 @@ INSERT INTO tb_test VALUES (1), (6), (8
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzQyMTMxNTA4LC0xOTU1MzA2MTE2LDEzMj
+eyJoaXN0b3J5IjpbMTA1MDI0ODgyLC0xOTU1MzA2MTE2LDEzMj
 czNTExMzcsMTczNDkyMjQzNV19
 -->
