RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -149,7 +149,10 @@ INSERT INTO tb_test VALEUS (3);
 BEGIN;
 INSERT INTO tb_test VALEUS (4);
 ```
-* tb
+* 만약 `insert-intention-lock`이 없다면?
+	* InnoDB는 1~6 사이의 새로운 primary key를 insert하기 위해 해당 구간에 lock을 잡아야 함.
+	* exclusive-gab-lock을 사용할 것이다.
+	* 
 
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
@@ -196,6 +199,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA1MDI0ODgyLC0xOTU1MzA2MTE2LDEzMj
-czNTExMzcsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbLTc5MTI5NTkwNSwtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
