--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -152,7 +152,10 @@ INSERT INTO tb_test VALEUS (4);
 * 만약 `insert-intention-lock`이 없다면?
 	* InnoDB는 1~6 사이의 새로운 primary key를 insert하기 위해 해당 구간에 lock을 잡아야 함.
 	* exclusive-gab-lock을 사용할 것이다.
-	* 
+	* 그러면 위의 3개 트랜잭션은 모두 동일한 구간에 gab-lock을 잡기 위해 순차적으로 실행된다.
+		* fdpk 값이 1~6 레코드 간격을 exclusive-gab-lock으로 잠근다.
+		* 새로운 primary key 값을 insert한다.
+		* 새로 insert된 primary key 
 
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
@@ -199,6 +202,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc5MTI5NTkwNSwtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbLTg5MjkyOTI1NywtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
