RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -155,8 +155,10 @@ INSERT INTO tb_test VALEUS (4);
 	* 그러면 위의 3개 트랜잭션은 모두 동일한 구간에 gab-lock을 잡기 위해 순차적으로 실행된다.
 		* fdpk 값이 1~6 레코드 간격을 exclusive-gab-lock으로 잠근다.
 		* 새로운 primary key 값을 insert한다.
-		* 새로 insert된 primary key 
-
+		* 새로 insert된 primary key 3,4,5에 대해서 exclusive-record-lock을 건다.
+* 만약 `insert-intention-lock`를 사용하면?
+	* 위의 불합리한 문제점을 해결하기 위해 도입되었다.
+	* 3개 트랜잭션이 1~6 구간에 대한 `insert intention lock`을 동시에 획득한다.
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -202,6 +204,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg5MjkyOTI1NywtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbMjA2Nzk4ODY0OCwtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
