RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -161,6 +161,9 @@ INSERT INTO tb_test VALEUS (4);
 	* 3개 트랜잭션이 1~6 구간에 대한 `insert intention lock`을 동시에 획득한다.
 	* 서로 충돌하는 값을 insert하지 않는 이상 동일 구간에 대해 서로 간섭받지 않고 동시에 insert가 처리될 수 있다.
 
+#### 중복이 허용되지 않는 컬럼 (primary key, unique key)
+* 중복이 허용되지 않는 컬럼에 대해 중복된 값이 이미 존재한다면 InnoDB에서는 반드시 기존 중복 레코드에 shared-record-lock을 걸어야 한다.
+
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
 ### 3) REPLACE ...
@@ -205,6 +208,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODc4ODkxNzYsLTE5NTUzMDYxMTYsMTMyNz
-M1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTU1NTYxMjU1MywtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
