RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -165,6 +165,8 @@ INSERT INTO tb_test VALEUS (4);
 * 중복이 허용되지 않는 컬럼에 대해 중복된 값이 이미 존재한다면 InnoDB에서는 반드시 기존 중복 레코드에 `shared-record-lock`을 걸어야 한다.
 	* 중복키 오류를 발생시킨 트랜잭션이 commit, rollback 명령으로 종료될 때까지는 중복된 값을 가진 레코드가 다른 트랜잭션에 의해서 변경되거나 삭제되면 안되기 때문.
 	* 중복키 오류가 발생하면 해당 레코드에 대한 shared lock을 먼저 획득해야 하는 이유이다.
+* 문제는 shared lock을 가지고 있는 상태에서 다시 exclusive lock을 걸어야 할 때가 있음.
+	* deadlock 원인이 되는 경우가 상당히 많다.
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -210,6 +212,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYyOTgyNjIzMCwtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbMTg1NDgxNDQ5OCwtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
