RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -169,7 +169,19 @@ INSERT INTO tb_test VALEUS (4);
 * 문제는 shared lock을 가지고 있는 상태에서 다시 exclusive lock을 걸어야 할 때가 있음.
 	* deadlock 원인이 되는 경우가 상당히 많다.
 	* 시나리오를 보자.
-		
+		```sql
+		-- transaction#1
+		BEGIN;
+		INSERT INTO tb_test VALEUS (1);
+
+		-- transaction#2
+		BEGIN;
+		INSERT INTO tb_test VALEUS (3);
+
+		-- transaction#3
+		BEGIN;
+		INSERT INTO tb_test VALEUS (4);
+		```
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
@@ -215,6 +227,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MjYyOTQ2NDYsLTE5NTUzMDYxMTYsMT
-MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbLTc2OTM4Njg4MywtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
