--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -183,11 +183,15 @@ INSERT INTO tb_test VALEUS (4);
 		INSERT INTO tb_test VALEUS (1);
 		```
 
-		* INSERT 쿼리가 실행되면 primary key, unique key에 대해서 중복 체크를 수행해야 한다.
-		* 각 트랜잭션 별로 insert 쿼리 실행 후 commit, rollback이 수행되지 않으면 다음 상태가 된다.
-			* 1번 트랜잭션에서는 fdpk가 1인 레코드에 대해서 exclusive-record-lock을 가지고 있다.
-			* 2,3번 트랜잭션은 1번 트랜잭션이 점유한 
-
+	* INSERT 쿼리가 실행되면 primary key, unique key에 대해서 중복 체크를 수행해야 한다.
+	* 각 트랜잭션 별로 insert 쿼리 실행 후 commit, rollback이 수행되지 않으면 다음 상태가 된다.
+		* 1번 트랜잭션에서는 fdpk가 1인 레코드에 대해서 `exclusive-record-lock`을 가지고 있다.
+		* 2,3번 트랜잭션은 1번 트랜잭션이 점유한 record lock 때문에 `shared-record-lock`을 대기한다.
+		```sql
+		-- transaction#1
+		ROLLBACK;
+		```
+	* 이 상태에서 1번 트랜잭션이 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
 ### 3) REPLACE ...
@@ -232,6 +236,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NDg0NDcxMDMsLTE5NTUzMDYxMTYsMT
-MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbLTY3OTQ5MDE3OCwtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
