--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -191,7 +191,9 @@ INSERT INTO tb_test VALEUS (4);
 		-- transaction#1
 		ROLLBACK;
 		```
-	* 이 상태에서 1번 트랜잭션이 
+	* 이 상태에서 1번 트랜잭션이 롤백하면, exclusive-record-lock이 해제되면서
+	* 2,3번 트랜잭션은 key 1에 대한 shared-record-lock을 걸게 되고, 해당 레코드가 없다는 것을 판단하고 바로 exclusive-record-lock을 요청한다.
+	* 두 트랜잭션 모두 대기 상태에 빠진다. (모두 shared-record-loc
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
 ### 3) REPLACE ...
@@ -236,6 +238,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY3OTQ5MDE3OCwtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbLTYxNTExMzAxNywtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
