--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -193,7 +193,11 @@ INSERT INTO tb_test VALEUS (4);
 		```
 	* 이 상태에서 1번 트랜잭션이 롤백하면, exclusive-record-lock이 해제되면서
 	* 2,3번 트랜잭션은 key 1에 대한 shared-record-lock을 걸게 되고, 해당 레코드가 없다는 것을 판단하고 바로 exclusive-record-lock을 요청한다.
-	* 두 트랜잭션 모두 대기 상태에 빠진다. (모두 shared-record-loc
+	* 두 트랜잭션 모두 대기 상태에 빠진다. (모두 shared-record-lock을 가지고 있어서...)
+	* 일정 시간 이후에 `Lock wait timeout` 에러를 발생시키고 종료된다.
+		* 이 설정은 innodb_lock_wait_timeout 시스템 설정 변수 (기본값 50초)
+
+
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 
 ### 3) REPLACE ...
@@ -238,6 +242,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYxNTExMzAxNywtMTk1NTMwNjExNiwxMz
-I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbOTI1Mzk2NjUxLC0xOTU1MzA2MTE2LDEzMj
+czNTExMzcsMTczNDkyMjQzNV19
 -->
