RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -195,10 +195,14 @@ INSERT INTO tb_test VALEUS (4);
 	* 2,3번 트랜잭션은 key 1에 대한 shared-record-lock을 걸게 되고, 해당 레코드가 없다는 것을 판단하고 바로 exclusive-record-lock을 요청한다.
 	* 두 트랜잭션 모두 대기 상태에 빠진다. (모두 shared-record-lock을 가지고 있어서...)
 	* 일정 시간 이후에 `Lock wait timeout` 에러를 발생시키고 종료된다.
-		* 이 설정은 innodb_lock_wait_timeout 시스템 설정 변수 (기본값 50초)
+		* innodb_lock_wait_timeout 시스템 설정 변수 (기본값 50초)
+		* record-lock 에만 적용된다.
 
 
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
+* 중복키 값이 있는지 판단하기 위해서 shared lock을 걸어야 한다.
+* record가 존재한다면 exclusive lock을 걸고 업데이트를 수행한다.
+* record가 존재하지 않는다면 INSERT 문장과 같이 
 
 ### 3) REPLACE ...
 
@@ -242,6 +246,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTI1Mzk2NjUxLC0xOTU1MzA2MTE2LDEzMj
-czNTExMzcsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbLTQwMTgzNDM0OSwtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
