RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -202,10 +202,11 @@ INSERT INTO tb_test VALEUS (4);
 ### 2) INSERT INTO ... ON DUPLICATE KEY UPDATE ...
 * 중복키 값이 있는지 판단하기 위해서 shared lock을 걸어야 한다.
 * record가 존재한다면 exclusive lock을 걸고 업데이트를 수행한다.
-* record가 존재하지 않는다면 INSERT 문장과 같이 
+* record가 존재하지 않는다면 INSERT 문장과 같이 `insert intention lock`을 걸고 실행되며, 새로운 record에 대해서 `exclusive-record-lock`을 획득한다.
 
 ### 3) REPLACE ...
-
+* 중복된 키 값이 있는지 판단하기 위해 shared lock을 걸어야 한다.
+* record가 존재하면 exclusive lock을 걸고 업데이트를 수행한다.
 
 ### 4) INSERT INTO tb_new ... SELECT ... FROM tb_old ...
 
@@ -246,6 +247,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQwMTgzNDM0OSwtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbMTUzMTgwNjMzOSwtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
