--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -206,9 +206,11 @@ INSERT INTO tb_test VALEUS (4);
 
 ### 3) REPLACE ...
 * 중복된 키 값이 있는지 판단하기 위해 shared lock을 걸어야 한다.
-* record가 존재하면 exclusive lock을 걸고 업데이트를 수행한다.
+* record가 존재하면 exclusive lock을 걸고 해당 record를 삭제한다.
+* 그 이후에 INSERT 문장과 동일하게 처리된다.
 
 ### 4) INSERT INTO tb_new ... SELECT ... FROM tb_old ...
+* 
 
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
@@ -247,6 +249,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUzMTgwNjMzOSwtMTk1NTMwNjExNiwxMz
-I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbLTE0NTQ0MzA3OTcsLTE5NTUzMDYxMTYsMT
+MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
 -->
