RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -210,7 +210,9 @@ INSERT INTO tb_test VALEUS (4);
 * 그 이후에 INSERT 문장과 동일하게 처리된다.
 
 ### 4) INSERT INTO tb_new ... SELECT ... FROM tb_old ...
-* 
+* tb_new 테이블에는 INSERT와 마찬가지로 새로 추가되는 레코드에 대해서 `exclusive-record-lock`을 획득해야 한다.
+* 레코드를 읽어오는 tb_old 테이블의 대상 레코드는 `shared-next-key-lock`을 설정한다.
+	* INSERT
 
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
@@ -249,6 +251,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NTQ0MzA3OTcsLTE5NTUzMDYxMTYsMT
-MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbODMwNjk0NiwtMTk1NTMwNjExNiwxMzI3Mz
+UxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
