--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -212,7 +212,9 @@ INSERT INTO tb_test VALEUS (4);
 ### 4) INSERT INTO tb_new ... SELECT ... FROM tb_old ...
 * tb_new 테이블에는 INSERT와 마찬가지로 새로 추가되는 레코드에 대해서 `exclusive-record-lock`을 획득해야 한다.
 * 레코드를 읽어오는 tb_old 테이블의 대상 레코드는 `shared-next-key-lock`을 설정한다.
-	* INSERT
+	* INSERT가 수행되는 동안 읽어오는 대상 레코드의 변경을 막기 위함. (phantom record)
+	* replication 무결성을 보장하기 위한 필수 조건.
+	* 명령 실행 중에 tb_old 레코드가 변경되면 replication master와 slave의 테이블 레코드 건수가 달라질 수도 있다.
 
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
@@ -251,6 +253,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODMwNjk0NiwtMTk1NTMwNjExNiwxMzI3Mz
-UxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbMjA0NTM3MDYzMSwtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
