RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -216,6 +216,11 @@ INSERT INTO tb_test VALEUS (4);
 	* replication 무결성을 보장하기 위한 필수 조건.
 	* 명령 실행 중에 tb_old 레코드가 변경되면 replication master와 slave의 테이블 레코드 건수가 달라질 수도 있다.
 
+#### tb_old 테이블의 shared lock을 피한
+* 일반적으로 테이블간 레코드 복사 할 때 tb_old에 걸리는 shared lock이 자주 문제가 됨.
+	* tb_old가 빈번하게 변경되는 상황이면 이 쿼리는 다른 트랜잭션에 영향을 준다.
+	* 
+
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
 * tb_old 테이블에 lock을 회피하는 방법은 위와 동일하다.
@@ -253,6 +258,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA0NTM3MDYzMSwtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbMTk0NDU4NTcxOSwtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
