--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -219,10 +219,15 @@ INSERT INTO tb_test VALEUS (4);
 #### tb_old 테이블의 shared lock을 피하는 방법
 * 일반적으로 테이블간 레코드 복사 할 때 tb_old에 걸리는 shared lock이 자주 문제가 됨.
 * tb_old가 빈번하게 변경되는 상황이면 이 쿼리는 다른 트랜잭션에 영향을 준다.
+
 1. READ-COMMITTED isolation level로 하향조정.
 	* innodb_locks_unsafe_binlog를 활성화한다.
 	* master와 slave 사이에 발생하는 데이터 오차를 묵인하는 방법.
-	* replication이 사용되는 환경에서는 적용
+	* replication이 사용되는 환경에서는 적용하기 어렵다.
+
+2. MySQL의 복제 방식을 SBR(statement based replication)에서 RBR(record based replication)으로 변경
+	* 아직 RBR 방식이 많이 사용되지 않음.(20년 지난 지금도?)
+	* SBR 방식이 network traffi
 
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
@@ -261,6 +266,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY1MjI4OTAwOSwtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbMTg2NTk2OTUxMCwtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
