RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -227,7 +227,11 @@ INSERT INTO tb_test VALEUS (4);
 
 2. MySQL의 복제 방식을 SBR(statement based replication)에서 RBR(record based replication)으로 변경
 	* 아직 RBR 방식이 많이 사용되지 않음.(20년 지난 지금도?)
-	* SBR 방식이 network traffi
+	* SBR 방식이 network traffic을 많이 줄여줌.
+
+3. `INSERT INTO ... SELECT ...` 쿼리를 2개로 나눠서 실행하는 방법
+	* 1. `SELECT INFO OUTFILE ...` 명령으로 읽어올 데이터를 파일에 저장
+	* 2. `LOAD DATA INFILE ...` 명령으로 tb_new 테이블에
 
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
@@ -266,6 +270,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg2NTk2OTUxMCwtMTk1NTMwNjExNiwxMz
-I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbMzkxMzQwOTExLC0xOTU1MzA2MTE2LDEzMj
+czNTExMzcsMTczNDkyMjQzNV19
 -->
