RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -230,8 +230,12 @@ INSERT INTO tb_test VALEUS (4);
 	* SBR 방식이 network traffic을 많이 줄여줌.
 
 3. `INSERT INTO ... SELECT ...` 쿼리를 2개로 나눠서 실행하는 방법
-	* 1. `SELECT INFO OUTFILE ...` 명령으로 읽어올 데이터를 파일에 저장
-	* 2. `LOAD DATA INFILE ...` 명령으로 tb_new 테이블에
+	* 1. `SELECT INFO OUTFILE ...` 명령으로 읽어올 데이터를 파일에 저장.
+	* 2. `LOAD DATA INFILE ...` 명령으로 tb_new 테이블에 적재.
+	* 이 방식은 추가적인 disk i/o를 유발시켜서 효율적은 방법은 아니다.
+
+* 쓸만한게 별로 없네...
+
 
 ### 5) REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 과 마찬가지로, tb_old 테이블은 shared-lock을 걸고 tb_new 테이블은 exclusive-lock을 건다.
@@ -270,6 +274,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzkxMzQwOTExLC0xOTU1MzA2MTE2LDEzMj
+eyJoaXN0b3J5IjpbNDQxNjI3NjA4LC0xOTU1MzA2MTE2LDEzMj
 czNTExMzcsMTczNDkyMjQzNV19
 -->
