RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -245,6 +245,8 @@ INSERT INTO tb_test VALEUS (4);
 ## 3. UPDATE 쿼리의 lock
 
 ### 1) UPDATE ... WHERE ...
+* 단순 UPDATE 쿼리는 WHERE 절에 일치하는 레코드를 찾기 위해 참조한 모든 레코드에 `exclusive-next-key-lock`을 건다.
+* 
 
 ### 2) UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
 
@@ -274,6 +276,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDQxNjI3NjA4LC0xOTU1MzA2MTE2LDEzMj
+eyJoaXN0b3J5IjpbODg5NDM2Njg2LC0xOTU1MzA2MTE2LDEzMj
 czNTExMzcsMTczNDkyMjQzNV19
 -->
