RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -93,6 +93,14 @@ WHERE first_name='Gerogi' AND ' gender='F';
 * 쿼리 종류별로 사용하는 lock 방식이 다르다.
 * 전혀 lock을 사용하지 않을 것으로 예상했던 쿼리도 lock을 사용하는 것이 있다.
 
+## 0. Lock 종류
+### Exclusive-record-lock
+### Shared-record-lock
+### Gab-lock
+### Exclusive-next-key-lock
+### Shared-next-key-lock
+
+
 ## 1. SELECT 쿼리의 lock
 ### 1) SELECT ... FROM ...
 * 기본 형태의 select 쿼리는 lock을 사용하지 않는다.
@@ -276,6 +284,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODg5NDM2Njg2LC0xOTU1MzA2MTE2LDEzMj
-czNTExMzcsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbLTEwMzk3NDcwMDksLTE5NTUzMDYxMTYsMT
+MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
 -->
