RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -96,7 +96,7 @@ WHERE first_name='Gerogi' AND ' gender='F';
 ## 0. Lock 종류
 ### Exclusive-record-lock
 ### Shared-record-lock
-### Gab-lock
+### Exclusive-gab-lock
 ### Exclusive-next-key-lock
 ### Shared-next-key-lock
 
@@ -254,7 +254,8 @@ INSERT INTO tb_test VALEUS (4);
 
 ### 1) UPDATE ... WHERE ...
 * 단순 UPDATE 쿼리는 WHERE 절에 일치하는 레코드를 찾기 위해 참조한 모든 레코드에 `exclusive-next-key-lock`을 건다.
-* 
+* record lock 이 아닌 gab lock을 사용하는 이유는 phantom record의 발생을 막기 위함이다.
+* next-key-lock은 record와 re
 
 ### 2) UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
 
@@ -284,6 +285,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMzk3NDcwMDksLTE5NTUzMDYxMTYsMT
-MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTA0MTQwMjA5MywtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
