--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -255,9 +255,11 @@ INSERT INTO tb_test VALEUS (4);
 ### 1) UPDATE ... WHERE ...
 * 단순 UPDATE 쿼리는 WHERE 절에 일치하는 레코드를 찾기 위해 참조한 모든 레코드에 `exclusive-next-key-lock`을 건다.
 * record lock 이 아닌 gab lock을 사용하는 이유는 phantom record의 발생을 막기 위함이다.
-* next-key-lock은 record와 re
+* next-key-lock은 record와 gab을 동시에 획득하는 lock이다.
 
 ### 2) UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
+* JOIN UPDATE 쿼리는 여러개 테이블을 동시에 사용한다.
+* 최종적으로 UPDATE되는 컬럼이 포함된 모든 테이블의 레코드에 exclusive-next-key-lock이 걸린다.
 
 ## 4. DELETE 쿼리의 lock
 
@@ -285,6 +287,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0MTQwMjA5MywtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbLTgxODI1MTM4MCwtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
