RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -259,7 +259,7 @@ INSERT INTO tb_test VALEUS (4);
 
 ### 2) UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
 * JOIN UPDATE 쿼리는 여러개 테이블을 동시에 사용한다.
-* 최종적으로 UPDATE되는 컬럼이 포함된 모든 테이블의 레코드에 exclusive-next-key-lock이 걸린다.
+* 최종적으로 UPDATE되는 컬럼이 포함된 모든 테이블의 레코드에 `exclusive-next-key-lock`이 걸린다.
 
 ## 4. DELETE 쿼리의 lock
 
@@ -287,6 +287,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgxODI1MTM4MCwtMTk1NTMwNjExNiwxMz
-I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbLTEzODgxNDMzNTYsLTE5NTUzMDYxMTYsMT
+MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
 -->
