RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -260,10 +260,15 @@ INSERT INTO tb_test VALEUS (4);
 ### 2) UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
 * JOIN UPDATE 쿼리는 여러개 테이블을 동시에 사용한다.
 * 최종적으로 UPDATE되는 컬럼이 포함된 모든 테이블의 레코드에 `exclusive-next-key-lock`이 걸린다.
+* 그 외 단순 참조로 사용된 테이블에는 `shared-next-key-lock`이 걸린다.
+	* phantom record 발생 방지
+	* replication에서 master/slave 간 데이터 동기화 유지
 
 ## 4. DELETE 쿼리의 lock
 
 ### 1) DELETE FROM ... WHERE ...
+* 단순 DELETE 쿼리는 UPDATE와 동일하다.
+
 ### 2) DELETE a FROM tb_test1 a, tb_test2 b ...
 
 ## 5. DDL 문장의 lock
@@ -287,6 +292,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzODgxNDMzNTYsLTE5NTUzMDYxMTYsMT
+eyJoaXN0b3J5IjpbLTEwNjU1OTI1NzgsLTE5NTUzMDYxMTYsMT
 MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
 -->
