RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -270,9 +270,12 @@ INSERT INTO tb_test VALEUS (4);
 * 단순 DELETE 쿼리는 UPDATE와 동일하다.
 
 ### 2) DELETE a FROM tb_test1 a, tb_test2 b ...
-
+* JOIN DELETE 쿼리도 JOIN UPDATE 와 동일하다.
+ 
 ## 5. DDL 문장의 lock
 ### 1) CREATE TABLE tb_new ... SELECT ... FROM tb_old ...
+* `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 쿼리와 동일하다.
+* CREATE 쿼리는
 
 ### 2) RENAME TABLE tb_test TO tb_Backup, tb_swap TO tb_test, ...
 
@@ -292,6 +295,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjU1OTI1NzgsLTE5NTUzMDYxMTYsMT
-MyNzM1MTEzNywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTE1NTc0MTAzNCwtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
