RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -275,7 +275,9 @@ INSERT INTO tb_test VALEUS (4);
 ## 5. DDL 문장의 lock
 ### 1) CREATE TABLE tb_new ... SELECT ... FROM tb_old ...
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 쿼리와 동일하다.
-* CREATE 쿼리는
+* CREATE 쿼리는 DDL 이라서 쿼리가 완료됨과 동시에 트랜잭션도 자동으로 COMMIT 된다.
+* tb_old 테이블의 lock을 회피하는 방법은 위에 기술된 3가지 방법 모두 동일하게 적용할 수 있다.
+	* 단, 3번째 방식은 3개 쿼리로 나눠야  한다. (테이블 생성)
 
 ### 2) RENAME TABLE tb_test TO tb_Backup, tb_swap TO tb_test, ...
 
@@ -295,6 +297,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1NTc0MTAzNCwtMTk1NTMwNjExNiwxMz
-I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbNDQyMTU1OTE4LC0xOTU1MzA2MTE2LDEzMj
+czNTExMzcsMTczNDkyMjQzNV19
 -->
