RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -277,10 +277,14 @@ INSERT INTO tb_test VALEUS (4);
 * `INSERT INTO tb_new ... SELECT ... FROM tb_old ...` 쿼리와 동일하다.
 * CREATE 쿼리는 DDL 이라서 쿼리가 완료됨과 동시에 트랜잭션도 자동으로 COMMIT 된다.
 * tb_old 테이블의 lock을 회피하는 방법은 위에 기술된 3가지 방법 모두 동일하게 적용할 수 있다.
-	* 단, 3번째 방식은 3개 쿼리로 나눠야  한다. (테이블 생성)
+	* 단, 3번째 방식은 3개 쿼리로 나눠야 한다. (테이블 생성이 먼저 실행되어야 한다.)
 
 ### 2) RENAME TABLE tb_test TO tb_Backup, tb_swap TO tb_test, ...
-
+* 하나의 명령으로 여러개 테이블의 이름을 변경하는 작업이 가능하다.
+* 명시된 모든 테이블에 `Name-Lock`을 건다.
+	* 테이블 수준 lock
+	* DDL이라서 처리 후 자동으로 트랜잭션이 COMMIT 된다.
+	* 
 
 ## InnoDB에서 여러 쿼리 패턴 간의 lock wait
 
@@ -297,6 +301,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDQyMTU1OTE4LC0xOTU1MzA2MTE2LDEzMj
-czNTExMzcsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbMTUxODQ1MTMxMywtMTk1NTMwNjExNiwxMz
+I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
