RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -284,7 +284,8 @@ INSERT INTO tb_test VALEUS (4);
 * 명시된 모든 테이블에 `Name-Lock`을 건다.
 	* 테이블 수준 lock
 	* DDL이라서 처리 후 자동으로 트랜잭션이 COMMIT 된다.
-	* 
+	* Name-Lock이 걸리면 해당 테이블의 이름을 변경하는 동안 모든 레코드의 read, write 트랜잭션은 대기상태에 빠진다.
+* truncate 이슈.
 
 ## InnoDB에서 여러 쿼리 패턴 간의 lock wait
 
@@ -301,6 +302,6 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUxODQ1MTMxMywtMTk1NTMwNjExNiwxMz
+eyJoaXN0b3J5IjpbMTg5MDI5NjcwMiwtMTk1NTMwNjExNiwxMz
 I3MzUxMTM3LDE3MzQ5MjI0MzVdfQ==
 -->
