RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -196,16 +196,16 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Distinct**
 	* 쿼리의 Distinct를 처리하기 위해 조인하지 않아도 되는 항복은 모두 무시하고 꼭 필요한 것만 조인했음을 표시. p299
 * **Full scan on NULL key**
-	* 
+	* c
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA4NTk4NjY2LC0xODE1ODMzOTE0LDIwMT
-QxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEz
-NjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OC
-wxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5
-MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMz
-YxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3Nywx
-NDkyNzUzNzA2XX0=
+eyJoaXN0b3J5IjpbLTg4MDMzMDk5OSwxMDg1OTg2NjYsLTE4MT
+U4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2
+NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MC
+wxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5
+OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4OD
+E4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5Nywx
+Mjk0MDYwMzc3XX0=
 -->
