--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -196,16 +196,16 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Distinct**
 	* 쿼리의 Distinct를 처리하기 위해 조인하지 않아도 되는 항복은 모두 무시하고 꼭 필요한 것만 조인했음을 표시. p299
 * **Full scan on NULL key**
-	* c
+	* col1 IN (SELECT col2 FROM ...) 과 같은 조건에서 col1이 NULL을 만나면 풀 테이블 스캔을 사용할 것이라
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4MDMzMDk5OSwxMDg1OTg2NjYsLTE4MT
-U4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2
-NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MC
-wxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5
-OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4OD
-E4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5Nywx
-Mjk0MDYwMzc3XX0=
+eyJoaXN0b3J5IjpbLTEwMDE5OTQ2NDAsMTA4NTk4NjY2LC0xOD
+E1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAy
+NjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OT
+AsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3
+OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwOD
+gxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcs
+MTI5NDA2MDM3N119
 -->
