RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -199,16 +199,17 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* col1 IN (SELECT col2 FROM ...) 과 같은 조건에서 col1이 NULL을 만나면 풀 테이블 스캔을 사용할 것이라는 사실을 알려주는 키워드
 		* col1이 NOT NULL이라면 해당 키워드는 사용되지 않는다.
 		* 해당 키워드가 표시 된 경우,  col1에 실제로 NULL 값이 없다면 걱정 할 필요 없다. 하지만 NULL 값이 존재한다면 성능 저하를 불러일으킬 수 있다.
-* **Iㅡ**
+* **Impossible HAVING (MySQL 5.1부터)**
+	* HAVING 절의 조건을 만족하는 레코드가 없을 때 표시되는 키워드.
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA4OTA5MDQ2LDEwODU5ODY2NiwtMTgxNT
-gzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgwMjY0
-ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLD
-EzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5
-OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MT
-g0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEy
-OTQwNjAzNzddfQ==
+eyJoaXN0b3J5IjpbMjEwNzA3ODQyMywxMDg1OTg2NjYsLTE4MT
+U4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2
+NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MC
+wxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5
+OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4OD
+E4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5Nywx
+Mjk0MDYwMzc3XX0=
 -->
