RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -203,8 +203,8 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* HAVING 절의 조건을 만족하는 레코드가 없을 때 표시되는 키워드.
 	* 해당 키워드가 출력된 경우 쿼리가 제대로 작성되지 못한 경우가 대부분이므로 쿼리의 내용을 다시 점검하는 것이 좋다.
 * **Impossible WHERE (MySQL 5.1부터)**
-	* 
-* **
+	* Impossible HAVING과 비슷. WHERE 조건이 항상 FALSE가 될 수 밖에 없는 경우 표시.
+* **Impossible WHERE noticed after reading const tables**
 * **
 * **
 * **
@@ -215,11 +215,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjEzMjc4MDY0LDEwODU5ODY2NiwtMTgxNT
-gzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgwMjY0
-ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLD
-EzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5
-OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MT
-g0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEy
-OTQwNjAzNzddfQ==
+eyJoaXN0b3J5IjpbLTE3ODAwNjg3NjQsMTA4NTk4NjY2LC0xOD
+E1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAy
+NjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OT
+AsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3
+OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwOD
+gxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcs
+MTI5NDA2MDM3N119
 -->
