RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -205,7 +205,9 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Impossible WHERE (MySQL 5.1부터)**
 	* Impossible HAVING과 비슷. WHERE 조건이 항상 FALSE가 될 수 밖에 없는 경우 표시.
 * **Impossible WHERE noticed after reading const tables**
-* **
+	* d
+	* 
+* **No matching min/max row (MySQL 5.1부터)**
 * **
 * **
 * **
@@ -215,7 +217,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3ODAwNjg3NjQsMTA4NTk4NjY2LC0xOD
+eyJoaXN0b3J5IjpbLTE0OTUyMTQzODAsMTA4NTk4NjY2LC0xOD
 E1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAy
 NjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OT
 AsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3
